updated wordpress projects link url

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</p>
 			</a>
 			
-			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
+			<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://i.ibb.co/HzgSH4Z/great-command-ministries-portfolio.jpg" alt="great-command-ministries-portfolio"/>
 				<p class="project-title">
 					<span class="code">&lt;</span>
