--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<section id="projects" class="projects-section">
 		<h2 class="projects-section-header">These are some of my projects</h2>
-
+<h3 class="projects-subsection-header">Customer Projects</h3>
 		<div class="projects-grid">
 			
 			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
@@ -70,6 +70,15 @@
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					Mettry's CRCT WordPress Store
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+
+			<a href="http://circlea.co/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="http://heathmediadesigns.com/img/circle-a-1.png" title="source: imgur.com" alt="circle-a-portfolio-graphic-1" />
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Circle A Western
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
@@ -82,7 +91,9 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			
+		</div>	
+		<h3 class="projects-subsection-header">Certification Projects</h3>
+		<div class="projects-grid">
 			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image"
 					src="https://heathology.github.io/tribute-page/img/wesley-tribute-page-thumbnail.png" alt="project">
