updated circle-a project title

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<img class="project-image" src="http://heathmediadesigns.com/img/circle-a-1.png" title="source: imgur.com" alt="circle-a-portfolio-graphic-1" />
 				<p class="project-title">
 					<span class="code">&lt;</span>
-					Circle A Western
+					Circle A Western WordPress Store
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
