updated projects in portfolio

--- a/index.html
+++ b/index.html
@@ -103,6 +103,28 @@
 				</p>
 			</a>
 		</div>	
+		<h3 class="projects-subsection-header">Just for Fun Projects</h3>
+		<div class="projects-grid">
+		
+			<a href="https://heathology.github.io/weather-app/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="http://heathmediadesigns.com/img/weather-app.png"
+					alt="weather-app" />
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Weather App
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+
+			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png" alt="project">
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Generative Fractal Art JavaScript
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+		</div>
 		<h3 class="projects-subsection-header">Certification Projects</h3>
 		<div class="projects-grid">
 			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
@@ -157,14 +179,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png" alt="project">
-				<p class="project-title">
-					<span class="code">&lt;</span>
-					Generative Fractal Art JavaScript
-					<span class="code">/&gt;</span>
-				</p>
-			</a>
+			
 		</div>
 
 		<a href="https://www.behance.net/heathj85" rel="noopener" class="btn btn-show-all" target="_blank">See More<i
