--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
 		<h3 class="projects-subsection-header">Just for Fun Projects</h3>
 		<div class="projects-grid">
 
+			<a href="http://heathmediadesigns.com/weather-app" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="http://heathmediadesigns.com/img/weather-app-portfolio.png" alt="project">
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					JavaScript Weather App
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+
 			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png" alt="project">
 				<p class="project-title">
