added PHP notes app to projects

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
 	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
-	
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>heathology's portfolio</title>
@@ -46,21 +46,24 @@
 	<!-- START WELCOME SECTION -->
 
 	<section id="welcome-section" class="welcome-section">
-		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" alt="heath media designs"></div>
+		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png"
+				alt="heath media designs"></div>
 		<hr />
 		<h1 class="intro" id="intro">Hello, I am heathology</h1>
 		<div id="intro-grid">
 			<div class="row">
 				<div class="column">
-					<img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg" alt="Jesse Heath">
+					<img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg"
+						alt="Jesse Heath">
 				</div>
 				<div class="column">
-							<ul>
-							<li class="intro-list">💻 I am a web developer.</li>
-							<li class="intro-list">🌱 I build websites using HTML, CSS, JavaScript, and WordPress.</li>
-							<li class="intro-list">👀 I am also a historical theologian.</li>
-							<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family Guy, M*A*S*H, NCIS, and Bosch/Bosch:Legacy.</li>
-							</ul>
+					<ul>
+						<li class="intro-list">💻 I am a web developer.</li>
+						<li class="intro-list">🌱 I build websites using HTML, CSS, JavaScript, and WordPress.</li>
+						<li class="intro-list">👀 I am also a historical theologian.</li>
+						<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family
+							Guy, M*A*S*H, NCIS, and Bosch/Bosch:Legacy.</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -72,10 +75,11 @@
 
 	<section id="projects" class="projects-section">
 		<h2 class="projects-section-header">These are some of my projects</h2>
-<h3 class="projects-subsection-header">Customer Projects</h3>
+		<h3 class="projects-subsection-header">Customer Projects</h3>
 		<div class="projects-grid">
-			
-			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
+
+			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank"
+				class="project project-tile">
 				<img class="project-image" src="https://i.ibb.co/rGySZ4L/mettrys-crct-portfolio-5.png"
 					alt="mettrys-crct-portfolio-5" />
 				<p class="project-title">
@@ -86,28 +90,43 @@
 			</a>
 
 			<a href="http://circlea.co/" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="http://heathmediadesigns.com/img/circle-a.png" title="source: heathmediadesigns.com" alt="circle a screenshot" />
+				<img class="project-image" src="http://heathmediadesigns.com/img/circle-a.png"
+					title="source: heathmediadesigns.com" alt="circle a screenshot" />
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					Circle A Western WordPress Store
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			
-			<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="https://i.ibb.co/HzgSH4Z/great-command-ministries-portfolio.jpg" alt="great-command-ministries-portfolio"/>
+
+			<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" rel="noopener"
+				target="_blank" class="project project-tile">
+				<img class="project-image" src="https://i.ibb.co/HzgSH4Z/great-command-ministries-portfolio.jpg"
+					alt="great-command-ministries-portfolio" />
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					Previous WordPress Projects
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-		</div>	
+		</div>
 		<h3 class="projects-subsection-header">Just for Fun Projects</h3>
 		<div class="projects-grid">
 
-			<a href="http://heathmediadesigns.com/weather-app" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="http://heathmediadesigns.com/img/weather-app-portfolio.png" alt="project">
+			<a href="http://heathmediadesigns.com/notes-app" rel="noopener" target="_blank"
+				class="project project-tile">
+				<img class="project-image" src="http://heathmediadesigns.com/img/php-notes-app.png" alt="project">
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					PHP Note App
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+
+			<a href="http://heathmediadesigns.com/weather-app" rel="noopener" target="_blank"
+				class="project project-tile">
+				<img class="project-image" src="http://heathmediadesigns.com/img/weather-app-portfolio.png"
+					alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					JavaScript Weather App
@@ -115,8 +134,10 @@
 				</p>
 			</a>
 
-			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png" alt="project">
+			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank"
+				class="project project-tile">
+				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png"
+					alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					Generative Fractal Art JavaScript
@@ -126,7 +147,8 @@
 		</div>
 		<h3 class="projects-subsection-header">Certification Projects</h3>
 		<div class="projects-grid">
-			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank"
+				class="project project-tile">
 				<img class="project-image"
 					src="https://heathology.github.io/tribute-page/img/wesley-tribute-page-thumbnail.png" alt="project">
 				<p class="project-title">
@@ -135,7 +157,8 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/cafe-menu/" rel="noopener" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/cafe-menu/" rel="noopener" target="_blank"
+				class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/cafe-menu.png" alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
@@ -143,7 +166,8 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/flexbox-photo-gallery/" rel="noopener" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/flexbox-photo-gallery/" rel="noopener" target="_blank"
+				class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/flexbox-photo-gallery.png"
 					alt="project">
 				<p class="project-title">
@@ -152,7 +176,8 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/product-landing-page/" target="_blank" class="project project-tile" rel="noopener">
+			<a href="https://heathology.github.io/product-landing-page/" target="_blank" class="project project-tile"
+				rel="noopener">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/product-landing-page.png"
 					alt="project">
 				<p class="project-title">
@@ -169,7 +194,8 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/registration-form/" rel="noopener" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/registration-form/" rel="noopener" target="_blank"
+				class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/registration-form.png"
 					alt="project">
 				<p class="project-title">
@@ -178,7 +204,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			
+
 		</div>
 
 		<a href="https://www.behance.net/heathj85" rel="noopener" class="btn btn-show-all" target="_blank">See More<i
@@ -197,11 +223,12 @@
 		<div class="contact-links">
 			<a href="https://facebook.com/heathj85" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-facebook-square"></i> Facebook</a>
-			<a id="profile-link" href="https://github.com/heathology" rel="noopener" target="_blank" class="btn contact-details"><i
-					class="fab fa-github"></i> GitHub</a>
+			<a id="profile-link" href="https://github.com/heathology" rel="noopener" target="_blank"
+				class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
 			<a href="https://twitter.com/heathjl85" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-twitter"></i> Twitter</a>
-			<a href="mailto:heathj85@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+			<a href="mailto:heathj85@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i>
+				Send a mail</a>
 			<a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
 		</div>
 	</section>
