--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 				class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
 			<a href="https://twitter.com/heathjl85" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-twitter"></i> Twitter</a>
-			<a href="mailto:heathj85@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i>
+			<a href="mailto:heathology.1@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i>
 				Send a mail</a>
-			<a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+			<a href="tel:405-856-2025" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
 		</div>
 	</section>
 
