--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
 			<p>How do you take your coffee?</p>
 		</div>
 		<div class="contact-links">
-			<a href="https://facebook.com/heathj85" rel="noopener" target="_blank" class="btn contact-details"><i
+			<a href="https://facebook.com/heathology.1" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-facebook-square"></i> Facebook</a>
 			<a id="profile-link" href="https://github.com/heathology" rel="noopener" target="_blank"
 				class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-			<a href="https://twitter.com/heathjl85" rel="noopener" target="_blank" class="btn contact-details"><i
+			<a href="https://twitter.com/heathology1" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-twitter"></i> Twitter</a>
 			<a href="mailto:heathology.1@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i>
 				Send a mail</a>
@@ -240,10 +240,7 @@
 	<footer>
 
 		<p>
-			© Created for
-			<a href="https://www.freecodecamp.com/" rel="noopener" target="_blank">freeCodeCamp <i
-					class="fab fa-free-code-camp"></i></a> | <a href="https://heathology.github.io">Heath Media
-				Designs</a>
+			&#169; 2022 <a href="https://heathology.github.io">Heath Media Designs</a>
 		</p>
 	</footer>
 
