--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</a>
 
 			<a href="http://circlea.co/" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="http://heathmediadesigns.com/img/circle-a.png"
+				<img class="project-image" src="https://github.com/heathology/portfolio/img/circle-a.png"
 					title="source: heathmediadesigns.com" alt="circle a screenshot" />
 				<p class="project-title">
 					<span class="code">&lt;</span>
@@ -113,9 +113,9 @@
 		<h3 class="projects-subsection-header">Just for Fun Projects</h3>
 		<div class="projects-grid">
 
-			<a href="http://heathmediadesigns.com/weather-app" rel="noopener" target="_blank"
+			<a href="https://github.com/heathology/weather-app" rel="noopener" target="_blank"
 				class="project project-tile">
-				<img class="project-image" src="http://heathmediadesigns.com/img/weather-app-portfolio.png"
+				<img class="project-image" src="https://github.com/heathology/portfolio/img/weather-app-portfolio.png"
 					alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
